test/syc/good/sub.c
/*
 * Subtraction
 */

int sub_const(void)
{
	return 3 - 2 - 1;
}
