test/syc/bad/casenoswitch.c
/*
 * Case label without enclosing switch statement
 */

int main(void)
{
case 1:
	return 0;
}
